# locomo

./: .gitignore  HONCHO_EVALUATION.md  global_methods.py  pyproject.toml  requirements.txt
.cursor/rules/: cursor.mdc
data/: honcho_mappings.json
results/dia_conv_26_baseline/: conv-26_qa.json
results/honcho/: locomo10_qa copy.json  locomo10_qa.json  locomo10_qa_backup.json  locomo10_qa_stats honcho_base.json  locomo10_qa_stats.json  locomo10_qa_stats_backup.json
results/honcho/baseline_dates/: conv-26_qa.json  conv-26_qa_stats.json
results/honcho/baseline_dates_no_explanation/: conv-26_qa copy.json  conv-26_qa.json  conv-26_qa_f1_stats.json  conv-26_qa_llm_stats.json
results/honcho/dia_conv_26/: conv-26_qa.json
results/honcho/dia_conv_26_a/: conv-26_qa.json  conv-26_qa_backup.json  conv-26_qa_stats.json
results/honcho/dia_conv_26_baseline/: conv-26_qa.json  conv-26_qa_stats.json
results/honcho/dia_conv_26_dates/: conv-26_qa.json  conv-26_qa_stats.json
results/honcho/rsr_0610/: conv-26_qa.json  conv-26_qa_f1_stats.json  conv-26_qa_llm_stats.json
results/honcho/rsr_0612/: conv-26_qa copy.json  conv-26_qa.json  conv-26_qa_f1_stats.json  conv-26_qa_llm_stats.json
results/locomo10_qa_honcho_base/: conv-26_qa.json
scripts/: evaluate_honcho.sh  ingest_locomo_to_honcho.py  update_linear_issue.py
task_eval/: claude_utils.py  evaluate_qa.py  evaluation.py  honcho_utils.py
