[project]
name = "locomo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "accelerate==0.24.1",
    "anthropic==0.32.0",
    "bert-score==0.3.13",
    "diffusers==0.21.4",
    "fastapi==0.104.1",
    "google-generativeai==0.7.2",
    "gradio==3.24.1",
    "honcho-ai>=0.2.0",
    "httpx==0.25.0",
    "huggingface-hub==0.17.3",
    "ipython>=9.2.0",
    "jsonschema==4.19.2",
    "lightning==2.1.0",
    "matplotlib==3.7.0",
    "nltk==3.8.1",
    "numpy==1.26.0",
    "omegaconf==2.3.0",
    "openai==0.28.0",
    "pandas==2.1.2",
    "pydantic==1.10.13",
    "python-dotenv>=1.1.0",
    "pytorch-lightning==2.1.0",
    "pyyaml==6.0",
    "requests==2.31.0",
    "scikit-learn==1.3.2",
    "scipy==1.11.3",
    "seaborn==0.13.0",
    "sentence-transformers==2.2.2",
    "spacy==3.5.1",
    "tiktoken>=0.9.0",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "tqdm==4.64.1",
    "transformers==4.35.0",
    "uvicorn==0.23.2",
    "wandb==0.15.12",
]
